--- a/TradingBot.WPF/Themes/Generic.xaml
+++ b/TradingBot.WPF/Themes/Generic.xaml
@@ -1,7 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:TradingBot.WPF.Windows.Controls"
-                    xmlns:shell="http://schemas.microsoft.com/winfx/2006/xaml/presentation/shell">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Themes/BBCodeBlock.xaml" />
