--- a/TradingBot.WPF/MainWindow.xaml
+++ b/TradingBot.WPF/MainWindow.xaml
@@ -1,42 +1,26 @@
-﻿<local:ModernWindow x:Class="TradingBot.WPF.MainWindow"
-					xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-					xmlns:local="clr-namespace:TradingBot.WPF.Windows.Controls"
-					xmlns:presentation="clr-namespace:TradingBot.WPF.Presentation"
-					Title="TradingBot" IsTitleVisible="True"
-                    ContentSource="Views/Introduction.xaml">
-
-	<local:ModernWindow.TitleLinks>
-        <presentation:Link DisplayName="Settings" Source="/Pages/Settings.xaml" />
-        <presentation:Link DisplayName="Help" Source="https://github.com/firstfloorsoftware/mui/wiki" />
-    </local:ModernWindow.TitleLinks>
-
-	<!--<local:ModernWindow.MenuLinkGroups>
-		<presentation:LinkGroup DisplayName="Welcome">
-			<presentation:LinkGroup.Links>
-				<presentation:Link DisplayName="Introduction" Source="/Views/Introduction.xaml" />
-			</presentation:LinkGroup.Links>
-		</presentation:LinkGroup>
-		<presentation:LinkGroup DisplayName="Layout">
-			<presentation:LinkGroup.Links>
-				
-			</presentation:LinkGroup.Links>
-		</presentation:LinkGroup>
-		<presentation:LinkGroup DisplayName="Controls">
-			<presentation:LinkGroup.Links>
-				
-			</presentation:LinkGroup.Links>
-		</presentation:LinkGroup>
-		<presentation:LinkGroup DisplayName="Advanced">
-			<presentation:LinkGroup.Links>
-				
-			</presentation:LinkGroup.Links>
-		</presentation:LinkGroup>
-		<presentation:LinkGroup DisplayName="Settings" GroupKey="settings">
-			<presentation:LinkGroup.Links>
-				
-			</presentation:LinkGroup.Links>
-		</presentation:LinkGroup>
-	</local:ModernWindow.MenuLinkGroups>-->
-
-</local:ModernWindow>
+﻿<Window x:Class="TradingBot.WPF.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        Title="MainWindow">
+	<Grid>
+		<TabControl TabStripPlacement="Top">
+			<TabItem Header="BTC">
+				<DataGrid>
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="Pair"></DataGridTextColumn>
+						<DataGridTextColumn Header="Price"></DataGridTextColumn>
+					</DataGrid.Columns>
+				</DataGrid>
+			</TabItem>
+			<!--<TabItem Header="ETH">
+				<Label Content="Content goes here..." />
+			</TabItem>
+			<TabItem Header="USD">
+				<Label Content="Content goes here..." />
+			</TabItem>-->
+		</TabControl>
+	</Grid>
+</Window>
