--- a/TradingBot.Web/Views/Shared/_Layout.cshtml
+++ b/TradingBot.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TradingBot.Web</title>
-
+	<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -17,7 +19,7 @@
     </environment>
 </head>
 <body>
-    <div class="container body-content">
+    <div id="root" class="container body-content">
         @RenderBody()
     </div>
     <environment include="Development">
