--- a/TradingBot.Web/Views/Home/Index.cshtml
+++ b/TradingBot.Web/Views/Home/Index.cshtml
@@ -1,6 +1,16 @@
 ﻿<script type="text/babel">
-	ReactDOM.render(
-	<h1>Hello, world!</h1>,
-	document.getElementById('root')
-	);
+	fetch("/home/getpairs", { method: "GET" })
+	.then((response) => {
+	return response.json();
+	})
+	.then((json) => {
+		ReactDOM.render(
+		<h1>{json.server_time}!</h1>,
+		document.getElementById('root')
+		);
+	});
+</script>
+
+<script type="text/javascript">
+	
 </script>
