--- a/TradingBot.Web/Views/_ViewImports.cshtml
+++ b/TradingBot.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TradingBot.Web
-@using TradingBot.Web.Models
+@using TradingBot.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Microsoft.AspNetCore.SpaServices
